new audio buttons for mobile!
lets try this...

--- a/colours/coloursummary.html
+++ b/colours/coloursummary.html
@@ -22,7 +22,7 @@
         <p>Congratulations!</p>
         <img src="../images/summary.png" class="standard-image" alt="Colour Wheel"><br>
         <p>We've completed the 4 first steps of meta harmony</p>
-        <p>You've earned:</p>
+        <p>You've earned metaharmony level 2:</p>
         <div class="space-medium"></div>
         <h2><img src="../images/logo.png" class="xsmall-image" alt="lg"> <i><b>COLOUR WHEEL ESSENTIALS</b></i> <img src="../images/logo.png" class="xsmall-image" alt="lg"></h2>
         <div class="space-medium"></div>
