--- a/colours/rest.html
+++ b/colours/rest.html
@@ -22,9 +22,9 @@
         <p>congratulations!</p>
         <img src="../images/breaktime.png" class="standard-image" alt="Colour Wheel"><br>
         <p>You have completed the first two steps of the colour journey</p>
-        <p>You've earned your first metaharmony badge:</p>
+        <p>You've earned metaharmony level 1:</p>
         <br>
-        <h2><img src="../images/logo.png" class="xsmall-image" alt="lg"><b> COLOUR WHEEL FOUNDATIONS</b> <img src="../images/logo.png" class="xsmall-image" alt="lg"></h2>
+        <h2><img src="../images/logo.png" class="xsmall-image" alt="lg"><b><i> COLOUR WHEEL FOUNDATIONS</i></b> <img src="../images/logo.png" class="xsmall-image" alt="lg"></h2>
         <div class="space-medium"></div>
         <p><i><b>You know what the colour wheel is:</b></i></h1>
         <p><i>- Primary colours = notes related by minor 3rds</i></p>
