adding a space on homepage
between audio and progression

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="Geometry/Geometry.html">Geometry</a> 
         <a href="cookbook/InAction.html">Cook Book</a> 
         <a href="mystory.html">My Story</a> 
-        <a href="contact.html">Contact</a> 
+        <a href="contact.html">Contact</a>
         <div class="divider"></div>
     </nav>
     <p><i>WELCOME TO</i></p>
@@ -39,6 +39,8 @@
       <source src="audioCB/Bmaj.mp3" type="audio/mpeg">
   </audio>
 </div>
+<div class="space-large"></div>
+<h3><b><i>The full progression:</i></b></h3>
 <p><i>C^7 F^7 C^7 F^7</i></p>
 <p><i>Badd11 F^7 Badd11 F^7</i></p>
 <p><i>C^7 F^7 Cmaj</i></p>
