--- a/cookbook/Exploringdominants/Exploringdominants.html
+++ b/cookbook/Exploringdominants/Exploringdominants.html
@@ -198,7 +198,7 @@
     <p>In this riff I'm trying to obscure the 'semitone above' feeling of the chord by heavily accenting the 3rd in the bass</p>
     <p>and then we go to chord IV Bb major and use Gbm7 to get back to F</p>
     <div class="space-large"></div>
-    <p>I wrote another chord progression again trying obscure the 'semitone above the root' feeling</p>
+    <p>I wrote another chord progression again trying to obscure the 'semitone above the root' feeling</p>
     <p>F^7 Bb^7 Gbm7 Gm9</p>
     <div class="audio-player-container">
       <div class="audio-title">Minor tritone 2</div>
