--- a/Geometry/Geometry.html
+++ b/Geometry/Geometry.html
@@ -11,7 +11,7 @@
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
             <a href="../index.html">Home</a> 
             <a href="../colours/colours.html">Colours</a> 
-            <a href="geometry.html">Geometry</a> 
+            <a href="Geometry.html">Geometry</a> 
             <a href="../cookbook/InAction.html">Cook Book</a> 
             <a href="../mystory.html">My Story</a> 
             <a href="../contact.html">Contact</a> 
