--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="space-large"></div>
 <a href="colours/colours.html" class="nav-style" >Click here to learn Colours</a>
 <div class="space-large"></div>
-<h2><i>"I think metahamrony really shines for people who</i></h2>
+<h2><i>"I think metaharmony really shines for people who</i></h2>
 <h2><i>want to make fresh modern compositional choices"</i></h2>
 <div class="space-large"></div>
 <p><b>The Cook Book</b> is where we explore writing ideas with metaharmony</p>
