--- a/Geometry/Alphacubes.html
+++ b/Geometry/Alphacubes.html
@@ -26,7 +26,7 @@
         <img src="../imagesgeo/redyellowfade.gif" class="standard-image" alt="Colour Wheel">
         <div class="space-large"></div>
         <h2><i>This is the orange alpha cube</i></h2>
-        <p>Yellow + red + orange</p>
+        <p>Yellow + red = orange</p>
         <div class="space-large"></div>
         <p>We can make three alpha cubes, one for each secondary colour:</p>
         <img src="../imagesgeo/orangecube.png" class="standard-image" alt="Colour Wheel">
