--- a/Geometry/Advanced/diminishedcubes.html
+++ b/Geometry/Advanced/diminishedcubes.html
@@ -19,11 +19,72 @@
         <p><b><i><u>GEOMETRY:</u></i></b></p>
         <h1><i>DIMINISHED CUBES</i></h1>
         <div class="space-medium"></div>
-        <p>Diminished cubes encapsulate diatonic and full diminished harmony in one place</p>
-        <p>More coming soon</p>
+        <p><i>Have you noticed how hypercubes have these primary coloured cubes?</i></p>
+        <p><i>'I thought there were only four blue notes but this cube has eight...'</i></p>
+        <div class="space-medium"></div>
+        <img src="../../imagesgeo/bluecubefade.gif" class="standard-image" alt="Colour Wheel">
         <div class="space-large"></div>
-            <a href="Hypercubes.html"class="nav-style">Back to Hypercubes</a> |
-            <a href="arcades.html"class="nav-style">Continue to Arcades</a>
+        <h2>What's going on?</h2>
+        <div class="space-large"></div>
+        <p>Firstly, they are like an alpha cube,</p>
+        <p>in the sense we have two diminished squares which join to make four new faces</p>
+        <p>Remeber how the red and yellow squares make the four orange squares of the orange alpha cube?</p>
+        <img src="../../imagesgeo/orangerotation.gif" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <p>In our blue cube, we have two blue squares on the top and bottom</p>
+        <img src="../../imagesgeo/bluetopandbottom.gif" class="standard-image" alt="Colour Wheel">
+        <p>Here's all the notes on the cube:</p>
+        <img src="../../imagesgeo/bluenotes.png" class="standard-image" alt="Colour Wheel">
+        <p>Notice how the top square and the bottom square notes are rotated by 90º against each other</p>
+        <p>By joining two blue squares together like this we've created four new squares:</p>
+        <div class="space-large"></div>
+        <img src="../../imagesgeo/bluerotation.gif" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <h3><i>What are these new blue squares?</i></h3>
+        <div class="space-large"></div>
+        <h1>First thing: diatonic diminished</h1>
+        <p>Our 4 new faces only have three blue notes (with a note repeated)</p>
+        <p>Here's the blue face from the C major key cube:</p>
+        <div class="space-large"></div>
+        <img src="../../imagesgeo/Bdimnotes.png" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <p>We have the notes B, D(x2) and F</p>
+        <p>These are the notes of chord vii in C major, a B diminished triad: B, D and F</p>
+        <p>This allows us to have a seven note major scale in cube form:</p>
+        <img src="../../imagesgeo/Ckeycubefade.png" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <h1>Second thing: Barry's scale</h1>
+        <p>the blue cube also allows us to have our eight note barry harris scale from the complementary colours page:</p>
+        <div class="space-large"></div>
+        <img src="../../images/fullbarry.png" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <p>This scale is <b><i>all four blue notes</i></b> in the key of C major</p>
+        <p>We can think of it as using the full blue cube in the orange hypercube:</p>
+        <div class="space-large"></div>
+        <img src="../../imagesgeo/barryshift.gif" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <h3>One last question:</h3>
+        <p>Why the doubled notes?</p>
+        <h3>Response:</h3>
+        <p>firstly they allow us to have the cubic structure of the hypercube,</p>
+        <p>Without the doubled blue notes we wouldnt have enough physical material to build the hypercube.</p>
+        <p>We also couldnt build the harmonically balanced key cube with only seven geometric points.</p>
+        <p>Secondly,</p>
+        <p>in the world of just innoation (where we tune notes to pure mathematical ratios rarther than equal temprement)</p>
+        <p>when you build a major scale, you have to choose between two tunings of the second degree of the scale</p>
+        <p>Do you go up a 5th twice from the tonic to tune it? (C, G, D)</p>
+        <p>or do you go down a minor 3rd and then down a 5th? (C, A, D)</p>
+        <p>This result is two slightly differently tuned notes</p>
+        <p>and this is the note that's doubled in the key cube</p>
+        <p>Obviously this isnt relevant to us as we're working with equal temprement</p>
+        <p>So both notes for us are tuned the exact same</p>
+        <p>But its a cool fact and feature of the hypercube</p>
+        <div class="space-large"></div>
+        <h1><i>Conclusion:</i></h1>
+        <p>These diminished cubes encapsulate diatonic and full diminished harmony in one place</p>
+        <div class="space-large"></div>
+            <a href="../atrium.html"class="nav-style">Back to Atria</a> |
+            <a href="../Geometry.html"class="nav-style">Back to Geometry</a>
             <div class="space-large"></div>
             <div class="divider"></div>
         <div class="space-small"></div>
