--- a/Geometry/Geometry.html
+++ b/Geometry/Geometry.html
@@ -107,7 +107,10 @@
         <a href="atrium.html"class="nav-style">6. Atria</a><br><br><br>
         <a href="recap.html"class="nav-style">SUMMARY</a><br><br><br>
         <div class="space-large"></div>
-        <h2>Advanced geometry pages coming soon</h2>
+        <h2>Advanced geometry pages:</h2>
+        <div class="space-medium"></div>
+        <a href="Advanced/diminishedcubes.html"class="nav-style">Diminished Cubes</a><br><br><br>
+        <a href="Advanced/higherdimensions.html"class="nav-style">Higher Dimensions</a><br><br><br>
         <div class="space-large"></div>
         <div class="divider"></div>
         <div class="space-small"></div>
