--- a/Geometry/Advanced/higherdimensions.html
+++ b/Geometry/Advanced/higherdimensions.html
@@ -22,8 +22,8 @@
         <p>The hypercube exists in four dimensions</p>
         <p>More coming soon</p>
         <div class="space-large"></div>
-            <a href="Hypercubes.html"class="nav-style">Back to Hypercubes</a> |
-            <a href="arcades.html"class="nav-style">Continue to Arcades</a>
+            <a href="../Hypercubes.html"class="nav-style">Back to Hypercubes</a> |
+            <a href="../Geometry.html"class="nav-style">Back to Geometry</a>
             <div class="space-large"></div>
             <div class="divider"></div>
         <div class="space-small"></div>
