--- a/Geometry/Advanced/diminishedcubes.html
+++ b/Geometry/Advanced/diminishedcubes.html
@@ -29,6 +29,7 @@
         <p>Firstly, they are like an alpha cube,</p>
         <p>in the sense we have two diminished squares which join to make four new faces</p>
         <p>Remeber how the red and yellow squares make the four orange squares of the orange alpha cube?</p>
+        <div class="space-large"></div>
         <img src="../../imagesgeo/orangerotation.gif" class="standard-image" alt="Colour Wheel">
         <div class="space-large"></div>
         <p>In our blue cube, we have two blue squares on the top and bottom</p>
