--- a/Geometry/Advanced/higherdimensions.html
+++ b/Geometry/Advanced/higherdimensions.html
@@ -19,8 +19,91 @@
         <p><b><i><u>GEOMETRY:</u></i></b></p>
         <h1><i>HIGHER DIMENSIONS</i></h1>
         <div class="space-medium"></div>
-        <p>The hypercube exists in four dimensions</p>
-        <p>More coming soon</p>
+        <p>The hypercube exists in four dimensions of space</p>
+        <h2><i>What does this mean?</i></h2>
+        <div class="space-large"></div>
+        <p>When it comes to visualising and using the hypercube, none of this is essential</p>
+        <p>but it adds depth and is just really fun</p>
+        <div class="space-large"></div>
+        <p>There's also scope for using these deeper geometric insights musically</p>
+        <p>but thats for another day</p>
+        <div class="space-large"></div>
+        <h3>Ok let's understand this chart:</h3>
+        <div class="space-large"></div>
+        <img src="../../imagesgeo/dimensionchart.png" class="large-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <h2>If we can understand the jump from 2D to 3D</h2>
+        <p><i>- How a square becomes a cube</i></p>
+        <div class="space-large"></div>
+        <h2>We can understand the jump from 3D to 4D</h2>
+        <p><i>- How a cube becomes a hypercube</i></p>
+        <div class="space-large"></div>
+        <p>If we drew a cube on a piece of 2d paper</p>
+        <p>We could draw it like this, a little square inside a big square:</p>
+        <img src="../../imagesgeo/just3dcube.png" class="standard-image" alt="Colour Wheel">
+        <p>Its a small 2D square inside a bigger 2D square</p>
+        <p>A 2D person would think of it as simply one flat square inside another flat square in 2D space</p>
+        <p>But we know</p>
+        <h2><i>It's acctually</i></h2>
+        <p>A 2D square <i>behind</i> a 2D square <u>in 3D space</u></p>
+        <div class="space-large"></div>
+        <h2>The hypercube is exactly the same only one dimension higher</h2>
+        <div class="space-large"></div>
+        <img src="../../imagesgeo/justhypercube.png" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <p>We've got a little 3D cube inside a bigger 3D cube</p>
+        <div class="space-large"></div>
+        <p>We can see the 3D/4D analogy really clearly:</p>
+        <img src="../../imagesgeo/biglittle.gif" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <p>For us 3D people, thats the only way we can see the hypercube: little cube inside a big cube</p>
+        <p>but a 4D person would see the hypercube as having four dimensional depth with the bigger cube 'in front' of the smaller cube</p>
+        <div class="space-large"></div>
+        <p>We'll never truly see or grasp this</p>
+        <p>in the same way a 2D person will never see or grasp the 3D depth of a cube</p>
+        <div class="space-large"></div>
+        <h2><i>But the 2D person can understand that the cube is composed of 6 squares</i></h2>
+        <h2><i>Even if they have to think of some squares being 'inside' others (which they aren't)</i></h2>
+        <p><i>(We can do the same with 4D)</i></p>
+        <div class="space-large"></div>
+        <p>Here are the 6 faces of the cube according to 2D people:</p>
+        <img src="../../imagesgeo/6faces.gif" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <p>It's important to note that the last four squares appear shrunken and slanted to the 2D person</p>
+        <p>but to us 3D people, we know this is only a matter of perspective,</p>
+        <p>these squares are in fact not shruken or slanted</p>
+        <p>In 3D, all six squares are equal is size and shape</p>
+        <div class="space-large"></div>
+        <h3><i>All this applies up a step in 4D</i></h3>
+        <p>Here's the 8 cubes of the hypercube from our 3D perspective:</p>
+        <div class="space-large"></div>
+        <img src="../../imagesgeo/8cells.gif" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <h2>Just like with the 3D version before,</h2>
+        <p>the front, back, left, right, top and bottom cubes appear shruken and slanted</p>
+        <p>But just like with the 3D cube, this is only because of our limited perspective</p>
+        <p><i>In 4D, all 8 cubes have equal size and perspective</i></p>
+        <div class="space-large"></div>
+        <p>Just like a 3D cube allows us to connect together multiple 2D squares,</p>
+        <p>the 4D hypercube allows us to connect together multiple 3D cubes.</p>
+        <p>By this same logic, the metaprism exists in 5D, because it allows us to connect together multiple 4D hypercubes</p>
+        <div class="space-large"></div>
+        <img src="../../imagesgeo/MP.png" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <p>I do sometimes think with a bit of a 4D mind when dealing with hypercubes,</p>
+        <p>But other than its construction, I've not explored the metaprism much with a 5D perspective</p>
+        <div class="space-large"></div>
+        <h3><i>Story moment:</i></h3>
+        <p>When i showed my mathematician friend joe my chord wheel prototype (back in 2016)</p>
+        <p>The wheel was able to spin and had other spinning wheels upon the big wheel</p>
+        <p>He said,</p>
+        <p><i>"That's not a series of flat spinning wheels, its a shadow of a rotating 5D structure,</i></p>
+        <p><i>Every spin of a wheel is acctually a rotation in space"</i></p>
+        <p>He was right.</p>
+        <div class="space-large"></div>
+        <p>Anyway</p>
+        <p>There's loads of great resources on the internet/youtube about 4D and hypercubes if you want to learn more about this,</p>
+        <p>But 99% of the time im just thinking of all these things as simple intuitive 3D objects as we see them :)</p>
         <div class="space-large"></div>
             <a href="../Hypercubes.html"class="nav-style">Back to Hypercubes</a> |
             <a href="../Geometry.html"class="nav-style">Back to Geometry</a>
