--- a/Geometry/Hypercubes.html
+++ b/Geometry/Hypercubes.html
@@ -36,7 +36,7 @@
         <div class="space-large"></div>
         <h1>We did it!</h1>
         <h1>We built the hypercube</h1>
-        <p>The hyperucbe mathematically exists in four dimnetions of physical space</p>
+        <p>The hyperucbe mathematically exists in four dimensions of physical space</p>
         <p>Check out this advanced geometry page for detail on that:</p>
         <div class="space-medium"></div>
         <a href="Advanced/higherdimensions.html"class="nav-style">Higher Dimensions</a>
