--- a/Geometry/atrium.html
+++ b/Geometry/atrium.html
@@ -45,7 +45,7 @@
         <h1><i>Congrats!</i></h1>
         <p>We've covered all the basic geometric features of metaharmony!</p>
         <div class="space-large"></div>
-        <p>Let's do a Summary of what we;ve learned:</p>
+        <p>Let's do a Summary of what we've learned:</p>
         <div class="space-large"></div>
         <a href="arcades.html"class="nav-style">Back to Arcades</a> |
             <a href="../Geometry/recap.html"class="nav-style">Summary</a>
