--- a/Geometry/Advanced/higherdimensions.html
+++ b/Geometry/Advanced/higherdimensions.html
@@ -110,6 +110,14 @@
             <div class="space-large"></div>
             <div class="divider"></div>
         <div class="space-small"></div>
-        <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
+        <nav>
+            <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../../index.html">Home</a> 
+            <a href="../../colours/colours.html">Colours</a> 
+            <a href="../Geometry.html">Geometry</a> 
+            <a href="../../cookbook/InAction.html">Cook Book</a> 
+            <a href="../../mystory.html">My Story</a> 
+            <a href="../../contact.html">Contact</a> 
+        </nav>
         </body>
  </html>
