--- a/Geometry/Geometry.html
+++ b/Geometry/Geometry.html
@@ -103,10 +103,14 @@
         <a href="Alphacubes.html"class="nav-style">2. Alpha Cubes</a><br><br><br>
         <a href="Hypercubes.html"class="nav-style">3. Hypercubes</a><br><br><br>
         <a href="metaprism.html"class="nav-style">4. Metaprism</a><br><br><br>
-        <a href="arcades.html"class="nav-style">5. arcades</a><br><br><br>
+        <a href="arcades.html"class="nav-style">5. Arcades</a><br><br><br>
         <a href="atrium.html"class="nav-style">6. Atria</a><br><br><br>
         <a href="recap.html"class="nav-style">SUMMARY</a><br><br><br>
         <div class="space-large"></div>
+        <h3><i>Dont' forget the bigger picture as you explore:</i></h3>
+        <p><i>(The dotted lines show pages that explain the same idea from a different perspective)</i></p>
+<img src="../images/websitemap.png" class="large-image" alt="Colour Wheel"><br>
+<div class="space-large"></div>
         <h2>Advanced geometry pages:</h2>
         <div class="space-medium"></div>
         <a href="Advanced/diminishedcubes.html"class="nav-style">Diminished Cubes</a><br><br><br>
@@ -114,6 +118,14 @@
         <div class="space-large"></div>
         <div class="divider"></div>
         <div class="space-small"></div>
+        <nav>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+          <a href="../index.html">Home</a> 
+          <a href="../colours/colours.html">Colours</a> 
+          <a href="../Geometry/Geometry.html">Geometry</a> 
+          <a href="../cookbook/InAction.html">Cook Book</a> 
+          <a href="../mystory.html">My Story</a> 
+          <a href="../contact.html">Contact</a>
+      </nav>
         </body>
  </html>
