--- a/colours/colours.html
+++ b/colours/colours.html
@@ -35,10 +35,21 @@
             <a href="complimentary.html"class="nav-style">4. Complementary Colours</a><br><br><br>
             <a href="coloursummary.html"class="nav-style">SUMMARY</a><br><br><br>
             <div class="space-medium"></div>
+            <h3><i>Dont' forget the bigger picture as you explore:</i></h3>
+<img src="../images/websitemap.png" class="large-image" alt="Colour Wheel"><br>
+<div class="space-large"></div>
             <h2>Advanced colour pages coming soon</h2>
             <div class="space-large"></div>
             <div class="divider"></div>
         <div class="space-small"></div>
+        <nav>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="colours.html">Colours</a> 
+            <a href="../Geometry/Geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
+            <a href="../contact.html">Contact</a>
+        </nav>
         </body>
  </html>
