--- a/index.html
+++ b/index.html
@@ -57,19 +57,25 @@
 <div class="space-large"></div>
 <a href="cookbook/InAction.html" class="nav-style" >Click here for Cook Book</a>
 <div class="space-large"></div>
+<h3><i>Here's a map of the essential pages of this website and how they link together:</i></h3>
+<p><i>(The dotted lines show pages that explain the same idea from a different perspective)</i></p>
+<img src="images/websitemap.png" class="large-image" alt="Colour Wheel"><br>
+<div class="space-large"></div>
 <p><i>Theres no right place to start metaharmony,</i></p>
 <p><i>you might want to start with colours, geometry, or cook book for inspiration</i></p>
 <h3><i>The choice ahead is yours:</i></h3>
 <p><i>They all meld together in the end</i></p>
 <div class="space-large"></div>
-<a href="colours/colours.html" class="nav-style" >Learn Colours</a>
-<div class="space-medium"></div>
-<a href="Geometry/Geometry.html" class="nav-style" >Learn Geometry</a>
-<div class="space-medium"></div>
-<a href="cookbook/InAction.html" class="nav-style" >Explore Cook Book</a>
-<div class="space-large"></div>
 <div class="divider"></div>
         <div class="space-small"></div>
-<img src="images/logo.png" class="small-image" alt="Colour Wheel">
+<nav>
+      <img src="images/logo.png" class="small-image" alt="Colour Wheel">
+        <a href="index.html">Home</a> 
+        <a href="colours/colours.html">Colours</a> 
+        <a href="Geometry/Geometry.html">Geometry</a> 
+        <a href="cookbook/InAction.html">Cook Book</a> 
+        <a href="mystory.html">My Story</a> 
+        <a href="contact.html">Contact</a>
+    </nav>
   </body>
 </html>
