--- a/mystory.html
+++ b/mystory.html
@@ -137,10 +137,17 @@
     <p>Many thanks,</p>
     <p>Tom</p>
     <div class="space-large"></div>
-    <a href="index.html" class="nav-style" >Back Home</a>
-    <div class="space-large"></div>
+    <h3><i>Have you explored Colours, Geometry and Cook Book yet?</i></h3>
     <div class="divider"></div>
         <div class="space-small"></div>
-    <img src="images/logo.png" class="small-image" alt="Colour Wheel">
+    <nav>
+      <img src="images/logo.png" class="small-image" alt="Colour Wheel">
+      <a href="index.html">Home</a>
+        <a href="colours/colours.html">Colours</a>
+        <a href="Geometry/Geometry.html">Geometry</a>
+        <a href="cookbook/InAction.html">Cook Book</a>
+        <a href="mystory.html">My Story</a>
+        <a href="contact.html">Contact</a> 
+    </nav>
   </body>
 </html>
