--- a/Geometry/Alphacubes.html
+++ b/Geometry/Alphacubes.html
@@ -108,6 +108,14 @@
         <div class="space-large"></div>
         <div class="divider"></div>
         <div class="space-small"></div>
+        <nav>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+          <a href="../index.html">Home</a> 
+          <a href="../colours/colours.html">Colours</a> 
+          <a href="../Geometry/Geometry.html">Geometry</a> 
+          <a href="../cookbook/InAction.html">Cook Book</a> 
+          <a href="../mystory.html">My Story</a> 
+          <a href="../contact.html">Contact</a>
+      </nav>
         </body>
  </html>
