--- a/colours/coloursummary.html
+++ b/colours/coloursummary.html
@@ -48,11 +48,19 @@
         <div class="space-large"></div>
             <a href="complimentary.html"class="nav-style">Back to Complementary</a> |
             <a href="colours.html"class="nav-style">Advanced colour pages</a> | 
-            <a href="../cookbook/InAction.html"class="nav-style">Head to Cook Book</a> |
-            <a href="../Geometry/Geometry.html"class="nav-style">Check out Geometry</a>
+            <a href="../Geometry/Geometry.html"class="nav-style">Check out Geometry</a> |
+            <a href="../cookbook/InAction.html"class="nav-style">Head to Cook Book</a>
             <div class="space-large"></div>
             <div class="divider"></div>
         <div class="space-small"></div>
+        <nav>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="colours.html">Colours</a> 
+            <a href="../Geometry/Geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
+            <a href="../contact.html">Contact</a> 
+        </nav>
         </body>
  </html>
