--- a/cookbook/InAction.html
+++ b/cookbook/InAction.html
@@ -39,10 +39,21 @@
     <h3><i>Ideas that modulate around the Metaprism:</i></h3>
     <div class="space-medium"></div>
     <a href="metaprismkeychanges/iitoiii.html"class="nav-style">Coming soon</a>
-    <div class="space-medium"></div>
+    <div class="space-large"></div>
+    <h1><i>Don't forget the bigger picture as you explore:</i></h1>
+<img src="../images/websitemap.png" class="large-image" alt="Colour Wheel"><br>
+<div class="space-large"></div>
     <h2>More pages coming soon</h2>
     <div class="space-large"></div><div class="divider"></div>
     <div class="space-small"></div>
-    <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+    <nav>
+      <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+      <a href="../index.html">Home</a> 
+        <a href="../colours/colours.html">Colours</a> 
+        <a href="../Geometry/Geometry.html">Geometry</a> 
+        <a href="InAction.html">Cook Book</a> 
+        <a href="../mystory.html">My Story</a> 
+        <a href="../contact.html">Contact</a> 
+    </nav>
   </body>
 </html>
