--- a/colours/colours.html
+++ b/colours/colours.html
@@ -35,7 +35,8 @@
             <a href="complimentary.html"class="nav-style">4. Complementary Colours</a><br><br><br>
             <a href="coloursummary.html"class="nav-style">SUMMARY</a><br><br><br>
             <div class="space-medium"></div>
-            <h3><i>Dont' forget the bigger picture as you explore:</i></h3>
+            <h3><i>As you learn more, you'll be able to understand the connections:</i></h3>
+            <p><i>(The dotted lines show pages that explain the same idea from a different perspective)</i></p>
 <img src="../images/websitemap.png" class="large-image" alt="Colour Wheel"><br>
 <div class="space-large"></div>
             <h2>Advanced colour pages coming soon</h2>
