--- a/cookbook/InAction.html
+++ b/cookbook/InAction.html
@@ -41,9 +41,10 @@
     <a href="metaprismkeychanges/iitoiii.html"class="nav-style">Coming soon</a>
     <div class="space-large"></div>
     <h1><i>Don't forget the bigger picture as you explore:</i></h1>
+    <p><i>(The dotted lines show pages that explain the same idea from a different perspective)</i></p>
 <img src="../images/websitemap.png" class="large-image" alt="Colour Wheel"><br>
 <div class="space-large"></div>
-    <h2>More pages coming soon</h2>
+    <h2>More Cook Book coming soon</h2>
     <div class="space-large"></div><div class="divider"></div>
     <div class="space-small"></div>
     <nav>
