--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 <div class="space-large"></div>
 <p><i>Theres no right place to start metaharmony,</i></p>
 <p><i>you might want to start with colours, geometry, or cook book for inspiration</i></p>
-<h3><i>The choice ahead is yours:</i></h3>
+<h3><i>The choice ahead is yours,</i></h3>
 <p><i>They all meld together in the end</i></p>
+<h1><i>Choose below:</i></h1>
 <div class="space-large"></div>
 <div class="divider"></div>
         <div class="space-small"></div>
