--- a/mystory.html
+++ b/mystory.html
@@ -138,6 +138,7 @@
     <p>Tom</p>
     <div class="space-large"></div>
     <h3><i>Have you explored Colours, Geometry and Cook Book yet?</i></h3>
+    <p><i>Click below...</i></p>
     <div class="divider"></div>
         <div class="space-small"></div>
     <nav>
